src/main/antlr4/io/broessl/treesql/grammar/.antlr/RJsonPointerParser.java
// Generated from /workspaces/treeSQL/src/main/antlr4/io/broessl/treesql/grammar/RJsonPointer.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RJsonPointerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, NUMERIC_LITERAL=8, 
		RANGED_LITERAL=9, TILDE_PLUS_LITERAL=10, DOTDOTTILDE_PLUS_LITERAL=11, 
		ANON_FORWARD_RANGE=12, SLASH=13, ANON_BACKWARD_RANGE=14;
	public static final int
		RULE_rJsonPointer = 0, RULE_absoluteRJsonPointer = 1, RULE_relativeRJsonPointer = 2, 
		RULE_step = 3, RULE_simpleStep = 4, RULE_namedForwardRange = 5, RULE_namedBackwardRange = 6, 
		RULE_depthScan = 7, RULE_levelScan = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"rJsonPointer", "absoluteRJsonPointer", "relativeRJsonPointer", "step", 
			"simpleStep", "namedForwardRange", "namedBackwardRange", "depthScan", 
			"levelScan"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'~0'", "'~1'", "'{'", "','", "'}~'", "'['", "']~'", null, null, 
			null, null, "'~'", "'/'", "'..~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "NUMERIC_LITERAL", "RANGED_LITERAL", 
			"TILDE_PLUS_LITERAL", "DOTDOTTILDE_PLUS_LITERAL", "ANON_FORWARD_RANGE", 
			"SLASH", "ANON_BACKWARD_RANGE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RJsonPointer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RJsonPointerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RJsonPointerContext extends ParserRuleContext {
		public RelativeRJsonPointerContext relativeRJsonPointer() {
			return getRuleContext(RelativeRJsonPointerContext.class,0);
		}
		public TerminalNode EOF() { return getToken(RJsonPointerParser.EOF, 0); }
		public AbsoluteRJsonPointerContext absoluteRJsonPointer() {
			return getRuleContext(AbsoluteRJsonPointerContext.class,0);
		}
		public RJsonPointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rJsonPointer; }
	}

	public final RJsonPointerContext rJsonPointer() throws RecognitionException {
		RJsonPointerContext _localctx = new RJsonPointerContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rJsonPointer);
		try {
			setState(24);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(18);
				relativeRJsonPointer();
				setState(19);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(21);
				absoluteRJsonPointer();
				setState(22);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AbsoluteRJsonPointerContext extends ParserRuleContext {
		public TerminalNode SLASH() { return getToken(RJsonPointerParser.SLASH, 0); }
		public RelativeRJsonPointerContext relativeRJsonPointer() {
			return getRuleContext(RelativeRJsonPointerContext.class,0);
		}
		public AbsoluteRJsonPointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absoluteRJsonPointer; }
	}

	public final AbsoluteRJsonPointerContext absoluteRJsonPointer() throws RecognitionException {
		AbsoluteRJsonPointerContext _localctx = new AbsoluteRJsonPointerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_absoluteRJsonPointer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(SLASH);
			setState(27);
			relativeRJsonPointer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelativeRJsonPointerContext extends ParserRuleContext {
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public List<TerminalNode> SLASH() { return getTokens(RJsonPointerParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(RJsonPointerParser.SLASH, i);
		}
		public RelativeRJsonPointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relativeRJsonPointer; }
	}

	public final RelativeRJsonPointerContext relativeRJsonPointer() throws RecognitionException {
		RelativeRJsonPointerContext _localctx = new RelativeRJsonPointerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_relativeRJsonPointer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			step();
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SLASH) {
				{
				{
				setState(30);
				match(SLASH);
				setState(31);
				step();
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StepContext extends ParserRuleContext {
		public SimpleStepContext simpleStep() {
			return getRuleContext(SimpleStepContext.class,0);
		}
		public TerminalNode ANON_FORWARD_RANGE() { return getToken(RJsonPointerParser.ANON_FORWARD_RANGE, 0); }
		public TerminalNode ANON_BACKWARD_RANGE() { return getToken(RJsonPointerParser.ANON_BACKWARD_RANGE, 0); }
		public NamedForwardRangeContext namedForwardRange() {
			return getRuleContext(NamedForwardRangeContext.class,0);
		}
		public NamedBackwardRangeContext namedBackwardRange() {
			return getRuleContext(NamedBackwardRangeContext.class,0);
		}
		public DepthScanContext depthScan() {
			return getRuleContext(DepthScanContext.class,0);
		}
		public LevelScanContext levelScan() {
			return getRuleContext(LevelScanContext.class,0);
		}
		public StepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_step; }
	}

	public final StepContext step() throws RecognitionException {
		StepContext _localctx = new StepContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_step);
		try {
			setState(44);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				simpleStep();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				match(ANON_FORWARD_RANGE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(39);
				match(ANON_BACKWARD_RANGE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(40);
				namedForwardRange();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(41);
				namedBackwardRange();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(42);
				depthScan();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(43);
				levelScan();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStepContext extends ParserRuleContext {
		public List<TerminalNode> SLASH() { return getTokens(RJsonPointerParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(RJsonPointerParser.SLASH, i);
		}
		public List<TerminalNode> ANON_FORWARD_RANGE() { return getTokens(RJsonPointerParser.ANON_FORWARD_RANGE); }
		public TerminalNode ANON_FORWARD_RANGE(int i) {
			return getToken(RJsonPointerParser.ANON_FORWARD_RANGE, i);
		}
		public SimpleStepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStep; }
	}

	public final SimpleStepContext simpleStep() throws RecognitionException {
		SimpleStepContext _localctx = new SimpleStepContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_simpleStep);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 20478L) != 0)) {
				{
				setState(49);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(46);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==ANON_FORWARD_RANGE || _la==SLASH) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				case 2:
					{
					setState(47);
					match(T__0);
					}
					break;
				case 3:
					{
					setState(48);
					match(T__1);
					}
					break;
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamedForwardRangeContext extends ParserRuleContext {
		public TerminalNode TILDE_PLUS_LITERAL() { return getToken(RJsonPointerParser.TILDE_PLUS_LITERAL, 0); }
		public NamedForwardRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namedForwardRange; }
	}

	public final NamedForwardRangeContext namedForwardRange() throws RecognitionException {
		NamedForwardRangeContext _localctx = new NamedForwardRangeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_namedForwardRange);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(TILDE_PLUS_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamedBackwardRangeContext extends ParserRuleContext {
		public TerminalNode DOTDOTTILDE_PLUS_LITERAL() { return getToken(RJsonPointerParser.DOTDOTTILDE_PLUS_LITERAL, 0); }
		public NamedBackwardRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namedBackwardRange; }
	}

	public final NamedBackwardRangeContext namedBackwardRange() throws RecognitionException {
		NamedBackwardRangeContext _localctx = new NamedBackwardRangeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_namedBackwardRange);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(DOTDOTTILDE_PLUS_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DepthScanContext extends ParserRuleContext {
		public List<TerminalNode> NUMERIC_LITERAL() { return getTokens(RJsonPointerParser.NUMERIC_LITERAL); }
		public TerminalNode NUMERIC_LITERAL(int i) {
			return getToken(RJsonPointerParser.NUMERIC_LITERAL, i);
		}
		public TerminalNode RANGED_LITERAL() { return getToken(RJsonPointerParser.RANGED_LITERAL, 0); }
		public DepthScanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_depthScan; }
	}

	public final DepthScanContext depthScan() throws RecognitionException {
		DepthScanContext _localctx = new DepthScanContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_depthScan);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__2);
			setState(59);
			match(NUMERIC_LITERAL);
			setState(60);
			match(T__3);
			setState(61);
			match(NUMERIC_LITERAL);
			setState(62);
			match(T__4);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RANGED_LITERAL) {
				{
				setState(63);
				match(RANGED_LITERAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LevelScanContext extends ParserRuleContext {
		public List<TerminalNode> NUMERIC_LITERAL() { return getTokens(RJsonPointerParser.NUMERIC_LITERAL); }
		public TerminalNode NUMERIC_LITERAL(int i) {
			return getToken(RJsonPointerParser.NUMERIC_LITERAL, i);
		}
		public TerminalNode RANGED_LITERAL() { return getToken(RJsonPointerParser.RANGED_LITERAL, 0); }
		public LevelScanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_levelScan; }
	}

	public final LevelScanContext levelScan() throws RecognitionException {
		LevelScanContext _localctx = new LevelScanContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_levelScan);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__5);
			setState(67);
			match(NUMERIC_LITERAL);
			setState(68);
			match(T__3);
			setState(69);
			match(NUMERIC_LITERAL);
			setState(70);
			match(T__6);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RANGED_LITERAL) {
				{
				setState(71);
				match(RANGED_LITERAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}